2011-04-16  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Nikolas Zimmermann.

        Only allow inline child for SVG text since we cannot
        handle block childs.
        https://bugs.webkit.org/show_bug.cgi?id=58678

        Test: svg/text/text-block-child-crash.xhtml

        * rendering/svg/RenderSVGText.cpp:
        (WebCore::RenderSVGText::isChildAllowed):
        * rendering/svg/RenderSVGText.h:

2011-04-15  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: The list of Database entries is empty if the page opens a database just before Web Inspector.
        https://bugs.webkit.org/show_bug.cgi?id=57833

        * inspector/Inspector.json:
        * inspector/InspectorDatabaseAgent.cpp:
        (WebCore::InspectorDatabaseAgent::didOpenDatabase):
        (WebCore::InspectorDatabaseAgent::InspectorDatabaseAgent):
        (WebCore::InspectorDatabaseAgent::setFrontend):
        (WebCore::InspectorDatabaseAgent::clearFrontend):
        (WebCore::InspectorDatabaseAgent::enable):
        (WebCore::InspectorDatabaseAgent::disable):
        (WebCore::InspectorDatabaseAgent::getDatabaseTableNames):
        (WebCore::InspectorDatabaseAgent::executeSQL):
        * inspector/InspectorDatabaseAgent.h:
        * inspector/front-end/inspector.js:

2011-04-15  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        CSP media-src is missing
        https://bugs.webkit.org/show_bug.cgi?id=58642

        Yay HTMLMediaElement for having the exact hook we need!

        Tests: http/tests/security/contentSecurityPolicy/media-src-allowed.html
               http/tests/security/contentSecurityPolicy/media-src-blocked.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::isSafeToLoadURL):
            - Although it's tempting to add this branch to the previous
              if-block, that results in the wrong error message being logged to