@@ -1,3 +1,10 @@
+2011-04-16  Patrick Gansterer  <paroga@webkit.org>
+
+        Unreviewed WinCE build fix for r84033.
+
+        * platform/win/LocalizedStringsWin.cpp:
+        (WebCore::localizedString):
+
 2011-04-16  Abhishek Arya  <inferno@chromium.org>
 
         Reviewed by Nikolas Zimmermann.
